infra/k8s-staging/-n-inv2/auth-postgres.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-auth-postgres
  namespace: inv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "auth-pgdata"
      volumes:
        - hostPath:
            path: "/home/docker/pgdata"
          name: auth-pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
  namespace: inv2
spec:
  selector:
    app: auth-postgres
  ports:
    - name: auth-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
