infra/k8s-staging/-n-inv2/ingress.svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: inv2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.inv2test.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /api/v2/auth/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3001
          - pathType: Prefix
            path: /api/v2/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3001
          - pathType: Prefix
            path: /api/v2/logs/?(.*)
            backend:
              service:
                name: logs-srv
                port:
                  number: 3100
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'false'
#     service.beta.kubernetes.io/do-loadbalancer-hostname: 'http://inv2test.com.ng'
#   labels:
#     helm.sh/chart: ingress-nginx-2.0.3
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/version: 0.32.0
#     app.kubernetes.io/managed-by: Helm
#     app.kubernetes.io/component: controller
#   name: ingress-nginx-controller
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: http
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: https
#   selector:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/component: controller
